--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,7 +24,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -66,3 +65,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@import "./Utils/mixins";
+@import "./Utils/variables";
+
+
+ @import "../components/Cards/Card";
+ @import "../components/Banner/Banner";
+ @import "../components/Header/Header";
