--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -35,7 +35,7 @@
 	&_link-home,
 	&_link-about {
 		@include font-right(12px);
-		color: $footer-color;
+		color: $black-color;
 		text-decoration: none;
 		padding-left: 0.8rem;
 
