--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,4 @@
 @import "../components/Banner/Banner";
 @import "../components/Header/Header";
 @import "../components/Footer/Footer";
+@import "../components/PageError/PageError";
