--- a/src/styles/Utils/variables.scss
+++ b/src/styles/Utils/variables.scss
@@ -4,9 +4,9 @@ $primary-color: #ff6060;
 $secondary-color: #f7f7f7;
 $tertiary-color: #FFFFFF;
 $black-color: #000000;
-$background-color: rgba(0, 0, 0, 0.3);
-$linear-cards: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
-$banner-background: $background-color url(../../assets/images/home_image.png);
+$background-color: #0000004d;
+$linear-cards: linear-gradient(180deg, #ffffff00 0%, #00000080 100%);
+$banner-background: $background-color url("/src/assets/images/home_image.png");
 $breakpoint-desktop: 769px;
-$wmin: 375px;
-$wmax: 768px;
+$about-background: $background-color url("/src/assets/images/about_image.png");
+
