--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,4 @@
 @import "../components/Header/Header";
 @import "../components/Footer/Footer";
 @import "../components/PageError/PageError";
+@import "../components/BannerAbout/BannerAbout";
