feat:collapse section about

--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -4,6 +4,8 @@
     background-color: $black-color;
     flex-direction: column;
     color: azure;
+    margin-top: 9%;
+    height: 240px;
 
     img {
         margin-top: 20px;
