--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,4 @@
 @import "../components/Footer/Footer";
 @import "../components/PageError/PageError";
 @import "../components/BannerAbout/BannerAbout";
+@import "../components/Collapse/Collapse"
