--- a/src/components/BannerAbout/_BannerAbout.scss
+++ b/src/components/BannerAbout/_BannerAbout.scss
@@ -1,12 +1,11 @@
 .background-about {
-    @include flex-center;
-    background: $about-background;
-    width: 100%;
-    height: 223px;
-    margin-top: 20px;
-    @include small-radius;
-
-    @media screen and (min-width: $breakpoint-desktop) {
-        @include big-radius;
-    }
+	height: 111px;
+	@include bkgrd($about-background);
+	@include small-radius;
+	@include flex-banner;
+	@media screen and (min-width: $breakpoint-desktop) {
+		height: 223px;
+		@include big-radius;
+		@include flex-banner;
+	}
 }
