feature: fiche logement

--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -4,11 +4,12 @@
     background-color: $black-color;
     flex-direction: column;
     color: azure;
-    margin-top: 9%;
-    height: 240px;
+    margin-top: 3%;
+    height: 252px;
 
     img {
         margin-top: 20px;
+        margin-bottom: 20px;
         width: 120px;
         height: 40px;
     }
