--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,4 +7,8 @@
 @import "../components/Footer/Footer";
 @import "../components/PageError/PageError";
 @import "../components/BannerAbout/BannerAbout";
-@import "../components/Collapse/Collapse"
+@import "../components/Collapse/Collapse";
+@import "../components/Carrousel/Carrousel";
+@import "../components/Rate/Rate";
+@import "../components/Tag/Tag";
+@import "../components/Host/Host";
