--- a/src/components/Collapse/_Collapse.scss
+++ b/src/components/Collapse/_Collapse.scss
@@ -1,9 +1,12 @@
 .collapse {
 	width: 100%;
 	margin: 20px 0;
+    
 
 	@media screen and (min-width: $breakpoint-desktop) {
 		margin: 31px auto 0;
+        padding-left: 9%;
+        padding-right: 9%;
 	}
 
 	&__visible {
