--- a/src/components/Collapse/_Collapse.scss
+++ b/src/components/Collapse/_Collapse.scss
@@ -5,8 +5,7 @@
 
 	@media screen and (min-width: $breakpoint-desktop) {
 		margin: 31px auto 0;
-        padding-left: 9%;
-        padding-right: 9%;
+        
 	}
 
 	&__visible {
@@ -84,3 +83,13 @@
 }
 
 
+
+.collapse-fiche-container {
+	@include flex-column;
+	width: 100%;
+
+	@media screen and (min-width: $breakpoint-desktop) {
+		flex-direction: row;
+		gap: 6%;
+	}
+}
