some fix props error console and fix number view carrousel

--- a/src/components/Carrousel/_Carrousel.scss
+++ b/src/components/Carrousel/_Carrousel.scss
@@ -43,15 +43,16 @@
     }
 
     &__number {
-        display: none;
+        display: block;
+        position: absolute;
+        @include font(16px, 500);
+        color: $tertiary-color;
+        left: 48%;
+        top: 86%;
 
         @media screen and (min-width: $breakpoint-desktop) {
-            display: block;
-            position: absolute;
+            
             @include font(18px, 500);
-            color: $tertiary-color;
-            left: 48%;
-            top: 86%;
         }
     }
 }
